--- a/BANN_R/BANN/DESCRIPTION
+++ b/BANN_R/BANN/DESCRIPTION
@@ -4,8 +4,8 @@ Title: Biologically Annotated Neural Network
 Version: 0.1.0
 Author: Pinar Demetici, Wei Cheng, Greg Darnell, Sohini Ramachandran, Lorin Crawford
 Maintainer: Wei Cheng <wei_cheng1@brown.edu>
-Description: Multi-scale genomics inference using variational EM algorithm with biologically annotated neural network.
-License: What license is it under?
+Description: Multi-scale genomic inference using biologically annotated neural networks.
+License: GNU General Public License v3.0
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
